[tool.poetry]
name = "studeep-backend"
version = "1.0.0"
description = "Studeep Server"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
